# job-scraper

./: pyproject.toml
core/: settings.py  urls.py
jobs/: admin.py  models.py  urls.py  views.py
jobs/management/commands/: fetch_jobs.py
jobs/migrations/: 0001_initial.py  0002_alter_job_source.py
jobs/services/: indeed.py  linkedin.py  scraper.py
jobs/templates/jobs/: base.html  detail.html  index.html  results.html
