[project]
name = "job-scraper"
version = "0.1.0"
description = "A web scraper for job listings."
authors = [
    {name = "lphillipe"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "curl-cffi (>=0.15.0,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython (>=9.12.0,<10.0.0)",
    "django-extensions (>=4.1,<5.0)"
]
